--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <select class="form-control" id="selectCalendar" name="calendar" ng-model="selectedCalendar" ng-options="cal as cal.summary for cal in calendars" ng-change="loadEvents()"></select>
                     
                 </div>
-                <button type="button" class="btn btn-primary" aria-label="Left Align" data-toggle='modal' data-target='#addEventModal'>
+                <button type="button" class="btn btn-primary" aria-label="Left Align" data-toggle='modal' data-target='#addEventModal' ng-click="resetAddForm()">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>Add new event
                 </button>
                 <br>
@@ -247,7 +247,7 @@
                         <div>
                             <div class="modal-footer">
                                 <button type="submit" class="btn btn-success" ng-click="editEvent(event)" data-dismiss="modal">Save</button>
-                                <button type="reset" class="btn btn-primary" ng-click="cancelEdit()" data-dismiss="modal">Cancel</button>
+                                <button type="reset" class="btn btn-primary" ng-click="cancel()" data-dismiss="modal">Cancel</button>
                             </div>
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-danger" ng-click="deleteEvent(newEvent);" data-dismiss="modal">Yes</button>
+                                <button type="submit" class="btn btn-danger" ng-click="deleteEvent(event);" data-dismiss="modal">Yes</button>
                                 <button type="reset"  class="btn btn-primary" data-dismiss="modal">No</button>
                             </div>
                         </div>
