--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         </div>
     </div>
-    <div class="footer-bottom" style="position:absolute; border-bottom-style:solid;border-top-style:solid; border-width:thin;border-color:lightgray; padding-top:5px" >
+    <div class="footer-bottom" style="position:absolute; bottom:0; border-bottom-style:solid;border-top-style:solid; border-width:thin;border-color:lightgray; padding-top:5px" >
         <div class="container">
             <div class="row">
                 <div class="text-center">
