footer final fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body ng-app="eventsApp" ng-controller="mainCtrl">
 
-    <div class="main ng-cloak" ng-cloak>
+    <div class="main ng-cloak" ng-cloak style="min-height: 93vh">
         <div style="margin:0 auto; position:absolute; top:40%;left:50%; margin-left:-3%" ng-show="!currentUser">
             <h3 style="margin:0 auto; margin-left:-100%;padding-left:10px" class="text-center">Welcome to Google Events Manager</h3>
             <br />
@@ -64,7 +64,7 @@
 
         </div>
     </div>
-    <div class="footer-bottom" style="position:absolute; bottom:0; border-bottom-style:solid;border-top-style:solid; border-width:thin;border-color:lightgray; padding-top:5px" >
+    <div class="footer" style=" border-bottom-style:solid;border-top-style:solid; border-width:thin;border-color:lightgray; padding-top:5px" >
         <div class="container">
             <div class="row">
                 <div class="text-center">
@@ -88,12 +88,6 @@
     <!-- Load app main script -->
     <script src="app/app.js?v=2"></script>
     <script src="app/controllers/mainController.js"></script>
-    
 
 </body>
-
-
-
-
-
 </html>
